# TIL_Proj

./: README.md  alembic.ini  config.py  containers.py  context_vars.py  database.py  database_models.py  get_testuser.py  main.py  middlewares.py  pyproject.toml
common/: auth.py  logger.py  messaging.py
migrations/: env.py
migrations/versions/: 2025_06_03_1841-479377cdc23e_add_user_table.py  2025_06_03_1845-417c060676bf_user_add_memo.py  2025_06_03_1848-f8677d2b0f4b_add_note_tag.py
note/application/: note_service.py
note/domain/repository/: note_repo.py
note/infra/db_models/: note.py
note/infra/repository/: note_repo.py
note/interface/controllers/: note_controller.py
user/application/: email_service.py  send_welcome_email_task.py  user_service.py  user_service_test.py
user/domain/: user.py
user/domain/repository/: user_repo.py
user/infra/db_models/: user.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
utils/: crypto.py  db_utils.py
